# ghc-progress

./: README.md  flake.nix  ghc-progress.cabal  shell.nix
src/: Main.hs
