cabal-version: 2.2

name:        ghc-progress
version:     0.1.0.0
synopsis:    Progress bar for GHC compilation
description: Progress bar for GHC compilation
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/ghc-progress
license:     ISC
copyright:   2023 Evan Relf

flag fast
  default: False
  manual: True

executable ghc-progress
  build-depends:
    , ansi-terminal
    , base
    , bytestring
    , flatparse > 0.4
    , fusion-plugin
    , streamly-bytestring
    , streamly-core
    , text
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -- The streamly docs recommend avoiding the threaded runtime unless you
    -- really need it
    -- -threaded
    -- -rtsopts
    -- -with-rtsopts=-N
  if flag(fast)
    -- streamly-core
    ghc-options:
      -O2
      -fdicts-strict
      -fmax-worker-args=16
      -fspec-constr-recursive=16
      -fplugin=Fusion.Plugin
    -- flatparse
    ghc-options:
      -fllvm
  hs-source-dirs: src
  main-is: Main.hs
